# chatbot_gym

./: .gitignore  README.md  app.py  chat_agent.py  conversation_orchestrator.py  example_conversation.py  extract_conversations.py  judge_prompt.txt  llama_documentation.md  pyproject.toml  requirements.txt  user_agent.py
baml_client/: __init__.py  async_client.py  async_request.py  inlinedbaml.py  parser.py  partial_types.py  sync_client.py  sync_request.py  type_builder.py  types.py
baml_src/: clients.baml  resume.baml
chat_agents/: convert_conversations_to_instruct_format.py  homedepo_chat_agent.txt
conversations/: conversation_demanding_customer_20250621_145728.json  conversation_frustrated_customer_20250621_150511.json  conversation_frustrated_customer_20250621_234902.json  conversation_frustrated_customer_20250622_101518.json
conversations/batch_20250621_152406/: conversation_anxious_student_20250621_152427.json  conversation_anxious_tech_user_20250621_152430.json  conversation_confused_elderly_20250621_152444.json  conversation_demanding_customer_20250621_152417.json  conversation_demanding_executive_20250621_152422.json  conversation_elderly_homeowner_20250621_152427.json  conversation_frustrated_customer_20250621_152422.json  conversation_frustrated_homeowner_20250621_152426.json
judge_prompts/: agent_performance_judge.txt  business_impact_judge.txt  conversation_quality_judge.txt  customer_satisfaction_judge.txt  synthesis_judge.txt
static/css/: style.css
static/js/: chat.js
templates/: index.html
user_agents/: base_prompt.txt
(+65 files in other folders)
